test/good/automatic/extension/class/without_input/ret_zero/0018.lat
/* Should evaluate if clause. */

class Node {
  int elem;
  Node next;

  void setElem (int e)  { elem = e; }
  void setNext (Node n) { next = n; }

  int  getElem () { return elem; }
  Node getNext () { return next; }

}

int main() {
  Node n = new Node;
  if(n == n) {
    printString("OK");
    return 0 ;
  }
}
