test/bad/automatic/extension/class/compile_time/0002.lat
class Node {
  int elem;
  Node next;

  void setElem (int e)  { elem = e; }
  void setNext (Node n) { next = n; }

  int  getElem () { return elem; }
  Node getNext () { return next; }

}

int main () {
  Node q = new Node;
  q.setElem;
  return 0;
}

     
